# fastfilter_java

./: .actrc  .bazelrc  .env.example  .env.linux-x86_64  .env.macos-arm64  .env.windows  .gitignore  BUILD.bazel  BUILD.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  ENV_USAGE.md  GITHUB_CI_SETUP.md  MODULE.bazel  README.md  WORKFLOW_SUMMARY.md  WORKFLOW_TESTING.md  WORKSPACE  pom.xml
.github/workflows/: java.yml  nightly-benchmarks.yml  pr-build.yml  release.yml  (+2 more)
bazel/: BUILD.bazel  fastfilter_cpp.BUILD
docs/: CLAUDE.md  INTEGRATION.md
examples/: README.md  java_cpp_comparison.java
fastfilter/: BUILD.bazel  CLAUDE.md  pom.xml
fastfilter/src/main/java/com/github/fastfilter/: Filter.java  FilterType.java
fastfilter/src/main/java/com/github/fastfilter/bloom/: BlockedBloom.java  Bloom.java
fastfilter/src/main/java/com/github/fastfilter/bloom/count/: CountingBloom.java  Select.java  SuccinctCountingBlockedBloom.java  SuccinctCountingBlockedBloomRanked.java  SuccinctCountingBloom.java  SuccinctCountingBloomRanked.java
fastfilter/src/main/java/com/github/fastfilter/cuckoo/: Cuckoo16.java  Cuckoo8.java  CuckooPlus16.java  CuckooPlus8.java
fastfilter/src/main/java/com/github/fastfilter/gcs/: BitBuffer.java  GolombCompressedSet.java  MonotoneList.java  Sort.java
fastfilter/src/main/java/com/github/fastfilter/tools/: BuildFilterFile.java  PasswordLookup.java
fastfilter/src/main/java/com/github/fastfilter/utils/: Hash.java  StringUtils.java
fastfilter/src/main/java/com/github/fastfilter/xor/: Xor16.java  Xor8.java  XorFuse8.java  XorSimple.java  XorSimple2.java
fastfilter/src/main/java/com/github/fastfilter/xorplus/: Rank9.java  XorPlus8.java
fastfilter/src/main/java/org/fastfilter/: Filter.java  FilterBuilders.java  FilterType.java  Filters.java  MutableFilter.java  QuickVerification.java  RemovableFilter.java
fastfilter/src/main/java/org/fastfilter/bloom/: BlockedBloom.java  Bloom.java
fastfilter/src/main/java/org/fastfilter/bloom/count/: CountingBloom.java  Select.java  SuccinctCountingBlockedBloom.java  SuccinctCountingBlockedBloomRanked.java  SuccinctCountingBloom.java  SuccinctCountingBloomRanked.java
fastfilter/src/main/java/org/fastfilter/cpp/: BinaryFuse8Filter.java  CppFilterType.java  NativeLibraryLoader.java  Xor8Filter.java
fastfilter/src/main/java/org/fastfilter/cuckoo/: Cuckoo16.java  Cuckoo8.java  CuckooPlus16.java  CuckooPlus8.java
fastfilter/src/main/java/org/fastfilter/gcs/: BitBuffer.java  GolombCompressedSet.java  GolombCompressedSet2.java  MonotoneList.java  MonotoneList2.java  Sort.java
fastfilter/src/main/java/org/fastfilter/tools/: BuildFilterFile.java  PasswordLookup.java
fastfilter/src/main/java/org/fastfilter/utils/: Hash.java  LongFold.java  StringUtils.java
fastfilter/src/main/java/org/fastfilter/xor/: Deduplicator.java  Xor16.java  Xor8.java  XorBinaryFuse16.java  XorBinaryFuse32.java  XorBinaryFuse8.java  XorFuse8.java  XorSimple.java
fastfilter/src/main/java/org/fastfilter/xorplus/: Rank9.java  XorPlus8.java
fastfilter/src/test/java/com/github/fastfilter/: RegressionTests.java  SimpleFuzzer.java  TestAllFilters.java  TestFilterType.java
fastfilter/src/test/java/com/github/fastfilter/analysis/: AnalyzeKeyGeneratorEffects.java  AnalyzeResults.java  AnalyzeSpaceUsageResults.java
fastfilter/src/test/java/com/github/fastfilter/bloom/count/: TestBitField.java
fastfilter/src/test/java/com/github/fastfilter/gcs/: BitArrayTest.java  BitBufferDirect.java  BitBufferTest.java  GolombCompressedSet2.java  MonotoneList2.java  MonotoneListTest.java  MonotoneListTest2.java  SortTest.java
fastfilter/src/test/java/com/github/fastfilter/mphf/: Builder.java  FastEvaluator.java  FastGenerator.java  MPHFilter.java
fastfilter/src/test/java/com/github/fastfilter/utils/: Profiler.java  RandomGenerator.java
fastfilter/src/test/java/com/github/fastfilter/xor/: ProbabilityCFuse.java  ProbabilityCFuse2.java  ProbabilityFuse.java  ProbabilityOfMappingStep.java  VisualPeeling.java
fastfilter/src/test/java/com/github/fastfilter/xorplus/: Rank9Test.java
fastfilter/src/test/java/org/fastfilter/: FilterType.java  RegressionTests.java  SimpleFuzzer.java  TestAllFilters.java  TestFilterBuilder.java  TestFilterType.java
fastfilter/src/test/java/org/fastfilter/analysis/: AnalyzeKeyGeneratorEffects.java  AnalyzeResults.java  AnalyzeSpaceUsageResults.java  AnalyzeXorConstructionCacheMisses.java
fastfilter/src/test/java/org/fastfilter/bloom/: BlockedBloomTest.java
fastfilter/src/test/java/org/fastfilter/bloom/count/: SuccinctCountingBlockedBloomTest.java  TestBitField.java
fastfilter/src/test/java/org/fastfilter/gcs/: BitArrayTest.java  BitBufferDirect.java  BitBufferTest.java  GolombCompressedSet2.java  MonotoneList2.java  MonotoneListTest.java  MonotoneListTest2.java  SortTest.java
fastfilter/src/test/java/org/fastfilter/mphf/: Builder.java  FastGenerator.java
fastfilter/src/test/java/org/fastfilter/quotient/: InsertOrderTest.java
fastfilter/src/test/java/org/fastfilter/utils/: Profiler.java
fastfilter/src/test/java/org/fastfilter/xor/: ProbabilityCFuse.java  ProbabilityCFuse2.java  ProbabilityFuse.java  SerializationTest.java  SmallSetTest.java  StringFilters.java  VisualPeeling.java
fastfilter/src/test/java/org/fastfilter/xorplus/: Rank9Test.java  SmallSetTest.java
fastfilter_cpp_ffi/: .actrc  .bazelrc  .env.example  .env.linux-x86_64  .env.macos-arm64  .env.windows  README.md  docker-compose.yaml  flake.nix  pom.xml
jmh/: BUILD.bazel  pom.xml
jmh/src/main/java/com/github/fastfilter/: ConstructionBenchmark.java  ConstructionState.java  Environment.java  KeyGenerationStrategy.java  MembershipBenchmark.java  MembershipCounters.java  MembershipState.java
jmh/src/main/java/org/fastfilter/: ComprehensiveFilterBenchmark.java  ConstructionBenchmark.java  ConstructionState.java  Environment.java  FilterBenchmark.java  FilterConstructionState.java  FilterQueryState.java  FuzzTestBenchmark.java  JavaVsCppBenchmark.java  KeyGenerationStrategy.java  MembershipState.java  XorBinaryFuseScalingBenchmark.java
scripts/: push-to-fork.sh
(+91 files in other folders)
